--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
     </head>
     <body>
         <div id="map">
+            <div id="dashboard" style="position: absolute; top: 10px; right: 10px; background: white; padding: 10px; z-index: 1000;">
+    <canvas id="myChart" width="300" height="200"></canvas>
+</div>
+
             <div id="popup" class="ol-popup">
                 <a href="#" id="popup-closer" class="ol-popup-closer"></a>
                 <div id="popup-content"></div>
@@ -60,5 +64,40 @@
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+    // Simulación de datos de ejemplo — puedes reemplazar con datos reales desde una capa
+    const labels = ['Ecuador', 'Perú', 'Chile', 'Argentina'];
+    const data = [12, 19, 3, 5]; // Reemplaza con datos reales de tus capas
+
+    const ctx = document.getElementById('myChart').getContext('2d');
+    new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: labels,
+            datasets: [{
+                label: 'Cantidad de observaciones',
+                data: data,
+                backgroundColor: [
+                    'rgba(75, 192, 192, 0.6)',
+                    'rgba(255, 159, 64, 0.6)',
+                    'rgba(153, 102, 255, 0.6)',
+                    'rgba(255, 205, 86, 0.6)'
+                ],
+                borderColor: 'rgba(0,0,0,0.3)',
+                borderWidth: 1
+            }]
+        },
+        options: {
+            responsive: false,
+            scales: {
+                y: {
+                    beginAtZero: true
+                }
+            }
+        }
+    });
+</script>
+
     </body>
 </html>
